link, refactor: linked instructor pages with endpoints & implemented the missing endpoints
